--- a/style.css
+++ b/style.css
@@ -1,7 +1,30 @@
-.header {
-    padding: 60px;
+body {
+    background-color: #EEE;
+    font-family: "Oleo Script";
+}
+
+#container {
+    background-color: white;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#header {
+    padding: 5%;
     text-align: center;
-    background: #1abc9c;
-    color: black;
+    background: skyblue;
+    color: white;
     font-size: 30px;
+}
+
+#content {
+    padding: 1%;
+}
+
+#footer {
+    padding: 1%;
+    background-color: gray;
+    color: white;
+    text-align: center;
 }
